<resources>
    <string name="app_name">200 Push Ups</string>
    <string name="app_shared_preferences_file_name">a_200_push_ups</string>
    <string name="sp_current_day">CURRENT_DAY</string>
    <string name="max_push_ups_setting">MAX_PUSH_UPS_SETTING</string>
    <string name="loading_time">2000</string>

    <string name="title">Отжимания</string>
    <string name="numberOfWeek">Неделя: %1$s</string>
    <string name="numberOfDay">День: %1$s</string>
    <string name="level">Уровень: %1$s</string>
    <string name="globalGoal">Цель: %1$s</string>
    <string name="maxPushUps">Максимум: %1$s</string>


    <string name="welcome">Добро пожаловать</string>
    <string name="welcome_description">
        Перед началом выполните тест на выносливость.
        Приложение создаст для вас персональную программу тренировок. \n
        Для максимального результата:\n- тренируйтесь 3 раза в неделю
        \n- делайте 1 день отдыха между тренировками
        \n- в конце недели выполните тест на выносливость</string>
    <string name="start_btn">Начать</string>


    <string name="train_title">Тренировка</string>

    <string name="tester_title">Тест на выносливость</string>
    <string name="tester_description">Выполните максимальное количество отжиманий</string>
    <string name="ready">Готово</string>

    <string name="train_week_title">План тренировок</string>
    <string name="day_res">Перерыв 1 день</string>
    <string name="test_title">Тест</string>
    <string name="break_time">Время отдыха %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>