<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="welcomeScreen"
            type="ka.el.a200pushups.fragments.WelcomeScreen" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_700"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/jura"
                    android:text="@string/welcome"
                    android:textColor="@color/red"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/jura"
                    android:text="@string/welcome_description"
                    android:textColor="@color/light_gray"
                    android:textSize="22sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_shape"
                    android:backgroundTint="@color/button"
                    android:fontFamily="@font/jura"
                    android:text="@string/start_btn"
                    android:textColor="@color/light_gray"
                    android:onClick="@{() -> welcomeScreen.startTest()}"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>